# clickr-app

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.txt  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.json
.github/instructions/: general.instructions.md
.github/workflows/: build-cli.yml  build.yml  release.yml
app/: README.md  SETTINGS_PAGE_PLAN.md  build-hooks-linux.js  components.json  electron-builder.yml  last_loaded.profile.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.web.json
app/resources/: e1.json  test_recieve_in_main.json
app/src/: assets.d.ts
app/tests/: autoshift.test.ts  dummy.test.ts  key-validation.service.test.ts  ll_shortcuts.test.ts  os_translation.test.ts  profile.test.ts
cli/: Cargo.toml  README.md  grammar.md  out
cli/example_profiles/: caps_to_ctl_and_escape.clickr  complex.clickr  duplicate_layer.clickr  invalid.clickr  invalid_emoji.clickr  layered.clickr  simple.clickr
cli/install/: install.ps1  install.sh
cli/src/: ast.rs  check.rs  cli.rs  compiled.rs  ipc.rs  lex.rs  lib.rs  main.rs  parse.rs  utils.rs
cli/src/ast/: key.rs  keys.rs  tests.rs
cli/src/cli/: styling.rs
resources/: e1.json
scripts/: output.md  readme.md  validate_represented_keys.py
src/: App.tsx  index.css
src/api/: endpoints.tsx
src/components/: DownloadSection.tsx  FloatingKeys.tsx  HeroSection.tsx  HowItWorks.tsx  KeyboardKey.tsx  LoginKeys.tsx  (+5 more)
website/: bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
(+179 files in other folders)
