[package]
name = "clickr-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
anstyle = "1.0.11"
regex = "1.12.2"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.228", features = ["derive"] }
itertools = "0.14.0"
serde_json = "1.0.145"
interprocess = "2.2.3"
thiserror = "2.0.17"
